--- a/src/app/shared/header-navigation/navigation.component.scss
+++ b/src/app/shared/header-navigation/navigation.component.scss
@@ -5,3 +5,9 @@
 .cus-but{
     height: 40px;
 }
+#number-storge-item-cus{
+    top: -10px;
+    background: rgb(253, 216, 53);
+    font-size: 12px;
+    font-weight: 600;
+}
