--- a/src/app/component/item-info/item-info.component.html
+++ b/src/app/component/item-info/item-info.component.html
@@ -16,11 +16,12 @@
             <div class="col-lg-5 col-md-6">
                 <div class="card">
                     <div class="card-body">
-                        <h4 class="card-title">{{dataContent.postName}}</h4>
-                        <p class="card-text">{{dataContent.description}}</p>
+                        <h4 class="card-title" id="card-cus">{{dataContent.postName}}</h4>
+                        <p class="card-text"><b *ngFor="let item of descriptions">{{item}}<br></b></p>
                         <div class="row ml-2 mb-2"><i class="mr-2">Cung cấp bởi : </i>
                             <div class="text-primary">{{dataContent.userName}}</div>
-                            <button type="button" class="btn btn-info cus-view-infor" (click)="viewProfileUser()">Xem thông tin</button>
+                            <button type="button" class="btn btn-info cus-view-infor" (click)="viewProfileUser()">Xem
+                                thông tin</button>
                         </div>
                         <div class="row ml-2 mb-2">
                             <i class="mr-2">Đánh giá : </i>
@@ -33,8 +34,10 @@
                         </div>
                         <div class="row ml-2 mb-2"><i class="mr-2">Địa chỉ : </i>{{dataContent.province.nameProvince}}
                         </div>
-                        <div class="row ml-2 mb-2"><i class="mr-2">Giá : </i>{{dataContent.unitPrice|convertAmount}}/1
-                            {{dataContent.calculationUnit.unitName}}</div>
+                        <div class="row ml-2 mb-2"><i class="mr-2">Giá : </i>
+                            <p id="amount-cus">{{dataContent.unitPrice|convertAmount}}/1
+                                {{dataContent.calculationUnit.unitName}}</p>
+                        </div>
                         <div class="row mb-2" *ngIf="dataContent.userId!==userId">
                             <div class="col">
                                 <a class="btn btn-info" style="width: 8px;padding-right: 20px;"
