--- a/src/app/layouts/full/full.component.html
+++ b/src/app/layouts/full/full.component.html
@@ -26,7 +26,7 @@
         </div>
     </aside>
     <div class="page-wrapper">
-        <div class="container-fluid" style="background: #E0F8F7;">
+        <div class="container-fluid" style="background: #E0F9A2;">
             <router-outlet></router-outlet>
         </div>
     </div>
