--- a/src/app/component/item-info/item-info.component.scss
+++ b/src/app/component/item-info/item-info.component.scss
@@ -1,8 +1,11 @@
 .star {
     position: relative;
     display: inline-block;
-    font-size: 20px;
     color: #d3d3d3;
+}
+.col-cus {
+    padding-right: 0px;
+    font-size: 15px;
 }
 .full {
     color: #ffff00;
@@ -30,4 +33,39 @@
 #amount-cus {
     font-weight: 400;
     color: red;
+}
+.col-xs-5ths,
+.col-sm-5ths,
+.col-md-5ths,
+.col-lg-5ths {
+    position: relative;
+    min-height: 1px;
+    padding-right: 5px;
+    padding-left: 5px;
+}
+
+.col-xs-5ths {
+    width: 20%;
+    float: left;
+}
+
+@media (min-width: 768px) {
+    .col-sm-5ths {
+        width: 20%;
+        float: left;
+    }
+}
+
+@media (min-width: 992px) {
+    .col-md-5ths {
+        width: 20%;
+        float: left;
+    }
+}
+
+@media (min-width: 1200px) {
+    .col-lg-5ths {
+        width: 20%;
+        float: left;
+    }
 }
