--- a/src/app/component/profile-user/profile-user.component.html
+++ b/src/app/component/profile-user/profile-user.component.html
@@ -53,7 +53,7 @@
                             </div>
                         </div>
                         <div class="row">
-                            <div class="col" id="stype-amount"><b>{{post.unitPrice|convertAmount}}/1
+                            <div class="col stype-amount"><b>{{post.unitPrice|convertAmount}}/1
                                     {{post.calculationUnit.unitName}}</b></div>
                         </div>
                     </div>
