--- a/src/assets/scss/style.scss
+++ b/src/assets/scss/style.scss
@@ -148,3 +148,10 @@ th.mat-sort-header-sorted {
 .custom-checkbox .custom-control-input:checked ~ .custom-control-label::before {
     background-color: #c0392b !important;
 }
+
+.stype-amount{
+    margin-top: 8px;
+    color: black;
+    font-weight: 400;
+    font-size: 16px;
+}
