--- a/src/app/component/item-info/item-info.component.scss
+++ b/src/app/component/item-info/item-info.component.scss
@@ -69,3 +69,15 @@
         float: left;
     }
 }
+.carousel-control-prev {
+    width: 50px !important;
+}
+
+.carousel-control-next {
+    width: 50px !important;
+}
+.button-count-item {
+    width: 8px;
+    padding-right: 20px;
+    font-weight: 900;
+}
