--- a/src/app/component/storage-cart/storage-cart.component.html
+++ b/src/app/component/storage-cart/storage-cart.component.html
@@ -27,8 +27,8 @@
                                                 value="{{storage.numberItem}}">
                                             <a class="btn btn-info ml-1" style="width: 8px;padding-right: 20px;"
                                                 (click)="changeNumber('add',storage)"><b>+</b></a>
-                                            <a class="btn btn-danger ml-2" (click)="purchaseItem(storage)">Mua ngay</a>
-                                            <a class="btn btn-success ml-2" (click)="removeStorageCart(storage)"><i
+                                            <a class="btn btn-danger ml-2 button-color-cus" (click)="purchaseItem(storage)">Mua ngay</a>
+                                            <a class="btn btn-success ml-2 button-color-cus" (click)="removeStorageCart(storage)"><i
                                                     class="ti-shopping-cart-full"></i>Xóa khỏi giỏ hàng</a>
                                         </div>
                                     </div>
@@ -51,7 +51,7 @@
                             </div>
                             <div class="row mb-2">
                                 <div class="col">
-                                    <a class="btn btn-danger ml-2" (click)="paymentCart()">Tiến hành đặt hàng</a>
+                                    <a class="btn btn-danger ml-2 button-color-cus" (click)="paymentCart()">Tiến hành đặt hàng</a>
                                 </div>
                             </div>
                         </div>
