--- a/src/app/layouts/full/full.component.html
+++ b/src/app/layouts/full/full.component.html
@@ -10,7 +10,7 @@
                 <a class="navbar-brand" href="index.html"><b>
                         <img src="https://res.cloudinary.com/dnccnn3nx/image/upload/v1585586887/logo_common.jpg"  class="round" width="76px" alt="homepage" class="dark-logo" />
                         <img src="assets/images/logo-light-icon.png" alt="homepage" class="light-logo" /></b>
-                    <span>
+                    <span id="title-cus">
                         Fresh market
                     </span>
                 </a>
@@ -26,7 +26,7 @@
         </div>
     </aside>
     <div class="page-wrapper">
-        <div class="container-fluid" style="background: #E0F9A2;">
+        <div class="container-fluid" style="background: #d9eff5;">
             <router-outlet></router-outlet>
         </div>
     </div>
