--- a/src/assets/scss/app.scss
+++ b/src/assets/scss/app.scss
@@ -14,8 +14,8 @@ Global Styles
 }
 
 body {
-    background: $sidebar;
-    font-family: $bodyfont;
+    // background: $sidebar;
+    // font-family: $bodyfont;
     margin: 0;
     overflow-x: hidden;
     color: $bodytext;
