--- a/src/assets/scss/style.scss
+++ b/src/assets/scss/style.scss
@@ -155,3 +155,25 @@ th.mat-sort-header-sorted {
     font-weight: 400;
     font-size: 16px;
 }
+.img-cus{
+    height: 200px;
+}
+label{
+    font-family: Helvetica, Arial, sans-serif;
+}
+i{
+    font-family: Helvetica, Arial, sans-serif;
+}
+b{
+    font-family: Helvetica, Arial, sans-serif;
+    font-weight: bold;
+}
+h4{
+    font-family: Helvetica, Arial, sans-serif !important;
+}
+h3{
+    font-family: Helvetica, Arial, sans-serif !important;
+}
+.button-color-cus{
+    color: white !important;
+}
