--- a/src/app/component/profile-user/profile-user.component.html
+++ b/src/app/component/profile-user/profile-user.component.html
@@ -31,7 +31,7 @@
 <div class="row">
     <div class="col-12">
         <div class="container">
-            DANH SÁCH SẢN PHẨM
+            <h4> DANH SÁCH SẢN PHẨM</h4>
         </div>
         <div class="row mt-2">
             <div class="col-md-5ths col-xs-6" *ngFor="let post of dataList">
