--- a/src/app/shared/header-navigation/navigation.component.html
+++ b/src/app/shared/header-navigation/navigation.component.html
@@ -9,7 +9,7 @@
 <ul class="navbar-nav my-lg-0 float-right">
     <li class="nav-item" id="cart"> <button type="button" class="btn btn-info cus-but" (click)="toStorageCart()"><span
                 class="mdi mdi-cart mdi-24px"></span>
-            đơn hàng<span class="badge badge-light" id="number-storge-item-cus">{{number}}</span>
+            Đơn hàng<span class="badge badge-light" id="number-storge-item-cus">{{number}}</span>
         </button></li>
     <li class="nav-item dropdown" ngbDropdown placement="bottom-right" *ngIf="checkLogin">
         <a ngbDropdownToggle class="nav-link dropdown-toggle text-muted waves-effect waves-dark"
